--- a/Movie_Mania/Views/Shared/_Header.cshtml
+++ b/Movie_Mania/Views/Shared/_Header.cshtml
@@ -14,7 +14,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("TVSeries", "Home")">Series</a>
+                    <a class="nav-link" href="@Url.Action("Index", "Home")">Series</a>
                 </li>
 
                 <li class="nav-item">
