--- a/Movie_Mania/Views/Shared/_HeaderSeries.cshtml
+++ b/Movie_Mania/Views/Shared/_HeaderSeries.cshtml
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light" id="navbar_sticky">
     <div class="container">
-        <a class="navbar-brand text-white fw-bold" href="@Url.Action("TvSeries", "Home")"><i class="fa fa-video-camera col_red me-1"></i> Movie Mania</a>
+        <a class="navbar-brand text-white fw-bold" href="@Url.Action("Index ","Home")"><i class="fa fa-video-camera col_red me-1"></i> Movie Mania</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,7 +14,7 @@
                 </li>
 
                 <li class="nav-item ">
-                    <a class="nav-link active text-decoration-underline" href="@Url.Action("TVSeries", "Home")">Series</a>
+                    <a class="nav-link active text-decoration-underline" href="@Url.Action("Index", "Home")">Series</a>
                 </li>
 
                 <li class="nav-item">
